Fix bottom settings being cut off

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 	}
 	content > div {
 		overflow-y: scroll;
-		height: 100%;
+		height: calc(100% - 70px);
 	}
 	.input_subject {
 
